Made sure section widths were set to 100% throughout

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,18 +30,16 @@ font-family: 'Work Sans', sans-serif;
           <a href="#about-me"><li class="page-link">About Me</li></a>
           <a href="#portfolio"><li class="page-link">Projects</li></a>
           <a href="#blog"><li class="page-link">Blog</li></a>
-          <a href="#contact"><li class="page-link">Get in Touch</li></a>
+          <a href="#contact"><li class="page-link">Contact</li></a>
         </ul>
       </nav>
-      <header id="landing-page">
-        <div id="introduction">
-          <h1 id="name">Hi, I'm Josh</h1>
+
+      <div id="introduction">
+        <h1 id="name">Hi, I'm Josh</h1>
+        <div id="subhead">
+          <h2><em>slogan goes here</em></h2>
         </div>
-        <div>
-          <h2 id="subhead">What's your problem?</h2>
-          <h2 id="subhead">Let's try solving it...</h2>
-        </div>
-      </header>
+      </div>
     </section>
     <section id="about-me">
       <h2>about me</h2>
@@ -116,7 +114,7 @@ font-family: 'Work Sans', sans-serif;
     <section id="portfolio">
       <h2>my projects</h2>
 
-      <div class="projects-table">
+      <div class="container">
         <table>
           <tr>
             <td>
@@ -194,14 +192,18 @@ font-family: 'Work Sans', sans-serif;
     <!-- BLOG -->
 
     <section id="blog">
-      <h2>written work</h2>
-      <div class="blog-box"></div>
+      <div class="container">
+        <h2>written work</h2>
+        <div class="blog-box"></div>
+      </div>
     </section>
 
     <!---CONTACT ME-->
 
     <section id="contact">
-      <h2>get in touch</h2>
+      <div class="container">
+        <h2>get in touch</h2>
+      </div>
     </section>
 
     <!---footer-->
