--- a/index.html
+++ b/index.html
@@ -27,85 +27,95 @@ font-family: 'Work Sans', sans-serif;
     <section id="hero">
       <nav>
         <ul class="nav-list" id="navbar-main">
-          <a href="#about-me"><li class="page-link">About Me</li></a>
-          <a href="#portfolio"><li class="page-link">Projects</li></a>
-          <a href="#blog"><li class="page-link">Blog</li></a>
-          <a href="#contact"><li class="page-link">Get in Touch</li></a>
+          <a href="#about-me"
+            ><li class="page-link"><em>About</em></li></a
+          >
+          <a href="#portfolio"
+            ><li class="page-link"><em>Projects</em></li></a
+          >
+          <a href="#blog"
+            ><li class="page-link"><em>Blog</em></li></a
+          >
+          <a href="#contact"
+            ><li class="page-link"><em>Contact</em></li></a
+          >
         </ul>
       </nav>
-      <header id="landing-page">
-        <div id="introduction">
-          <h1 id="name">Hi, I'm Josh</h1>
+
+      <div id="introduction">
+        <h1 id="name">Hi, I'm Josh</h1>
+        <div id="subhead">
+          <h2><em>slogan goes here</em></h2>
         </div>
-        <div>
-          <h2 id="subhead">What's your problem?</h2>
-          <h2 id="subhead">Let's try solving it...</h2>
-        </div>
-      </header>
+      </div>
     </section>
+
     <section id="about-me">
       <h2>about me</h2>
-      <img
-        class="hero-img"
-        src="../media/images/josh_peachey.jpg"
-        alt="software developer"
-      />
 
-      <div class="about-pars">
-        <h3>Hello world.</h3>
+      <div class="container" id="about-cont">
+        <img
+          class="hero-img"
+          src="../media/images/josh_peachey.jpg"
+          alt="software developer"
+        />
 
-        <p>
-          I’m a Manchester-based former tech reporter who has swapped writing
-          stories for writing code.
-        </p>
-        <p>
-          Inspired by interviewing digital leaders and working with the Digital
-          City Festival team, I decided to retrain as a software developer and
-          transition towards a tech career.
-        </p>
-        <p>
-          I’m passionate about harnessing new technologies to improve processes,
-          sales, and empower learning through interaction. As new problems
-          arise, for any business or body, I believe tech will be a fundamental
-          part of the right solution.
-        </p>
-        <p>
-          The same desire that drew me towards reporting - the ability to make a
-          real difference - has now taken me towards wanting to build useful
-          software and web apps. On this site, I will profile the different
-          projects I’ve worked on and share anything else of note.
-        </p>
-        <p>
-          Outside of the text editor, I’m an avid basketball fan, vinyl
-          enthusiast, and have been fortunate enough to travel all over the
-          United States and elsewhere. My most exciting journey still lies ahead
-          of me - continuous learning and development in the tech space…
-        </p>
-      </div>
+        <div class="about-pars">
+          <h3>Hello world.</h3>
 
-      <div id="tech-stack">
-        <div id="outer-box">
-          <h4><em>Languages and tools</em></h4>
-          <div class="logo-row">
-            <img
-              class="lang-logo"
-              src="../media/logos/480px-JavaScript-logo.png"
-            />
-            <img class="lang-logo" src="../media/logos/HTML5_Logo_512.png" />
+          <p>
+            I’m a Manchester-based former tech reporter who has swapped writing
+            stories for writing code.
+          </p>
+          <p>
+            Inspired by interviewing digital leaders and working with the
+            Digital City Festival team, I decided to retrain as a software
+            developer and transition towards a tech career.
+          </p>
+          <p>
+            I’m passionate about harnessing new technologies to improve
+            processes, sales, and empower learning through interaction. As new
+            problems arise, for any business or body, I believe tech will be a
+            fundamental part of the right solution.
+          </p>
+          <p>
+            The same desire that drew me towards reporting - the ability to make
+            a real difference - has now taken me towards wanting to build useful
+            software and web apps. On this site, I will profile the different
+            projects I’ve worked on and share anything else of note.
+          </p>
+          <p>
+            Outside of the text editor, I’m an avid basketball fan, vinyl
+            enthusiast, and have been fortunate enough to travel all over the
+            United States and elsewhere. My most exciting journey still lies
+            ahead of me - continuous learning and development in the tech space…
+          </p>
+        </div>
 
-            <img class="lang-logo" src="../media/logos/postgres-logo.png" />
-          </div>
-          <div class="logo-row">
-            <img
-              class="lang-logo"
-              src="../media/logos/CSS3_logo_and_wordmark.svg.png"
-            />
+        <div id="tech-stack">
+          <div id="outer-box">
+            <h4 id="lang-and-tools"><em>Languages and tools</em></h4>
+            <div class="logo-row">
+              <img
+                class="lang-logo"
+                src="../media/logos/480px-JavaScript-logo.png"
+              />
+              <img class="lang-logo" src="../media/logos/HTML5_Logo_512.png" />
 
-            <img class="lang-logo" src="../media/logos/react-logo.png" />
-            <img
-              class="lang-logo"
-              src="../media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
-            />
+              <img class="lang-logo" src="../media/logos/postgres-logo.png" />
+            </div>
+            <div class="logo-row">
+              <img
+                class="lang-logo"
+                src="../media/logos/CSS3_logo_and_wordmark.svg.png"
+              />
+
+              <img class="lang-logo" src="../media/logos/react-logo.png" />
+              <img
+                class="lang-logo"
+                src="../media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -116,7 +126,7 @@ font-family: 'Work Sans', sans-serif;
     <section id="portfolio">
       <h2>my projects</h2>
 
-      <div class="projects-table">
+      <div class="container">
         <table>
           <tr>
             <td>
@@ -195,13 +205,104 @@ font-family: 'Work Sans', sans-serif;
 
     <section id="blog">
       <h2>written work</h2>
-      <div class="blog-box"></div>
+      <div class="container">
+        <div id="written-intro">
+          <p>
+            Here you can find interviews that I've conducted with icons of
+            Manchester's tech scene. Some were written when promoting
+            Manchester's first ever Digital City Festival - a week-long
+            gathering of tech, e-commerce, marketing and media businesses.
+          </p>
+          <p>
+            I plan to continue creating written content to compliment my
+            technical development learning, and hopefully to help others. Please
+            feel free to give any feedback in the form at the bottom of this
+            page.
+          </p>
+        </div>
+        <div class="story-card">
+          <img class="story-img" src="/media/images/jon-corner.jpg" />
+          <h4 class="story-title">
+            Salford City Region's CEO on what digital citizenship and his
+            smart-city ambitions
+          </h4>
+          <p class="story-desc">
+            Maecenas potenti lacinia cupiditate habitant purus architecto
+            accusamus, tempora! Blandit, modi irure? At perspiciatis bibendum
+            repellat posuere quo, voluptate harum? Lacinia soluta atque dolorum?
+            Laboriosam.
+          </p>
+        </div>
+        <div class="story-card">
+          <img class="story-img" src="/media/images/katy-social-chain.jpeg" />
+          <h4 class="story-title">
+            Social Chain's Managing Director on staying ahead in today’s
+            ever-changing social media landscape
+          </h4>
+          <p class="story-desc">
+            Maecenas potenti lacinia cupiditate habitant purus architecto
+            accusamus, tempora! Blandit, modi irure? At perspiciatis bibendum
+            repellat posuere quo, voluptate harum? Lacinia soluta atque dolorum?
+            Laboriosam.
+          </p>
+        </div>
+        <div class="story-card">
+          <img class="story-img" src="/media/images/aine-featured-dcf.jpeg" />
+          <h4 class="story-title">
+            PWC's Scale Programme lead on a founder's mentality and the startup
+            ecosystem in the North
+          </h4>
+          <p class="story-desc">
+            Maecenas potenti lacinia cupiditate habitant purus architecto
+            accusamus, tempora! Blandit, modi irure? At perspiciatis bibendum
+            repellat posuere quo, voluptate harum? Lacinia soluta atque dolorum?
+            Laboriosam.
+          </p>
+        </div>
+      </div>
     </section>
 
     <!---CONTACT ME-->
 
     <section id="contact">
       <h2>get in touch</h2>
+      <div class="container">
+        <p>
+          Maecenas potenti lacinia cupiditate habitant purus architecto
+          accusamus, tempora! Blandit, modi irure? At perspiciatis bibendum
+          repellat posuere quo, voluptate harum? Lacinia soluta atque dolorum?
+          Laboriosam.
+        </p>
+
+        <form id="contact-form" action="" method="POST">
+          <label for="email"> Your email:</label>
+          <input
+            type="text"
+            id="email"
+            name="_replyto"
+            placeholder="steve-jobs@apple.com"
+          />
+
+          <label for="name"> Your name:</label>
+          <input
+            type="text"
+            id="yourname"
+            name="name"
+            placeholder="Steve Jobs"
+          />
+
+          <label for="message"> Your message:</label>
+          <textarea
+            name="message"
+            id="message"
+            rows="4"
+            placeholder="Hi Josh..."
+          ></textarea>
+          <button type="submit"><i class="fas fa-paper-plane"></i></button>
+        </form>
+
+        <input />
+      </div>
     </section>
 
     <!---footer-->
