--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <title>Josh Peachey | Software Developer</title>
-    <link rel="stylesheet" href="../CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="/style.css" type="text/css" />
     <link rel="icon" href="../media/logos/favicon.ico" />
     <!--GOOGLE FONTS-->
     <style>
