altered rel filepaths

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     />
 
     <title>Josh Peachey | Software Developer</title>
-    <link rel="stylesheet" href="/style.css" type="text/css" />
-    <link rel="icon" href="../media/logos/favicon.ico" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="icon" href="media/logos/favicon.ico" />
     <!--GOOGLE FONTS-->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Libre+Baskerville:ital@0;1&family=Work+Sans:wght@200;300;500&display=swap");
@@ -98,22 +98,22 @@ font-family: 'Work Sans', sans-serif;
             <div class="logo-row">
               <img
                 class="lang-logo"
-                src="../media/logos/480px-JavaScript-logo.png"
+                src="media/logos/480px-JavaScript-logo.png"
               />
-              <img class="lang-logo" src="../media/logos/HTML5_Logo_512.png" />
+              <img class="lang-logo" src="media/logos/HTML5_Logo_512.png" />
 
-              <img class="lang-logo" src="../media/logos/postgres-logo.png" />
+              <img class="lang-logo" src="media/logos/postgres-logo.png" />
             </div>
             <div class="logo-row">
               <img
                 class="lang-logo"
-                src="../media/logos/CSS3_logo_and_wordmark.svg.png"
+                src="media/logos/CSS3_logo_and_wordmark.svg.png"
               />
 
-              <img class="lang-logo" src="../media/logos/react-logo.png" />
+              <img class="lang-logo" src="media/logos/react-logo.png" />
               <img
                 class="lang-logo"
-                src="../media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
+                src="media/logos/jest-logo-F9901EBBF7-seeklogo.com.png"
               />
             </div>
           </div>
@@ -133,7 +133,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="../media/images/project-thumbnail-img.png"
+                  src="media/images/project-thumbnail-img.png"
                 />
                 <h3 class="proj-name">Project name</h3>
 
@@ -150,7 +150,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="../media/images/project-thumbnail-img.png"
+                  src="media/images/project-thumbnail-img.png"
                 />
                 <h3 class="proj-name">Project name</h3>
 
@@ -168,7 +168,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="../media/images/project-thumbnail-img.png"
+                  src="media/images/project-thumbnail-img.png"
                 />
                 <h3 class="proj-name">Project name</h3>
 
@@ -184,7 +184,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="../media/images/project-thumbnail-img.png"
+                  src="media/images/project-thumbnail-img.png"
                 />
                 <h3 class="proj-name">Project name</h3>
 
@@ -221,7 +221,7 @@ font-family: 'Work Sans', sans-serif;
           </p>
         </div>
         <div class="story-card">
-          <img class="story-img" src="/media/images/jon-corner.jpg" />
+          <img class="story-img" src="media/images/jon-corner.jpg" />
           <h4 class="story-title">
             Salford City Region's CEO on what digital citizenship and his
             smart-city ambitions
@@ -234,7 +234,7 @@ font-family: 'Work Sans', sans-serif;
           </p>
         </div>
         <div class="story-card">
-          <img class="story-img" src="/media/images/katy-social-chain.jpeg" />
+          <img class="story-img" src="media/images/katy-social-chain.jpeg" />
           <h4 class="story-title">
             Social Chain's Managing Director on staying ahead in today’s
             ever-changing social media landscape
@@ -247,7 +247,7 @@ font-family: 'Work Sans', sans-serif;
           </p>
         </div>
         <div class="story-card">
-          <img class="story-img" src="/media/images/aine-featured-dcf.jpeg" />
+          <img class="story-img" src="media/images/aine-featured-dcf.jpeg" />
           <h4 class="story-title">
             PWC's Scale Programme lead on a founder's mentality and the startup
             ecosystem in the North
