two more filepaths needed changing

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ font-family: 'Work Sans', sans-serif;
       <div class="container" id="about-cont">
         <img
           class="hero-img"
-          src="../media/images/josh_peachey.jpg"
+          src="media/images/josh_peachey.jpg"
           alt="software developer"
         />
 
