Minor changes to landing page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ font-family: 'Work Sans', sans-serif;
       <div id="introduction">
         <h1 id="name">Hi, I'm Josh</h1>
         <div id="subhead">
-          <h2><em>slogan goes here</em></h2>
+          <h2><em>I'm a software developer</em></h2>
         </div>
       </div>
     </section>
