Refactored up to a point where I'm happy with the presentation and state of the site - now to work on the content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <!-- <meta
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    /> -->
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -58,23 +58,28 @@ font-family: 'Work Sans', sans-serif;
       </nav>
 
       <div id="introduction">
-        <h1 id="name">Hi, I'm Josh</h1>
-        <div>
-          <h2 id="subhead"><em>I'm a software developer</em></h2>
-          <div id="hero-icons-box">
-            <a href="https://twitter.com/peach_dev" target="_blank"
-              ><i id="hero-icon" class="fab fa-github"></i
-            ></a>
-            <a href="https://twitter.com/peach_dev" target="_blank"
-              ><i id="hero-icon" class="fab social fa-twitter"></i
-            ></a>
-            <a href="https://twitter.com/peach_dev" target="_blank"
-              ><i id="hero-icon" class="fab fa-linkedin"></i
-            ></a>
-            <a href="https://twitter.com/peach_dev" target="_blank"
-              ><i id="hero-icon" class="fa fa-envelope-o"></i
-            ></a>
+        <div id="hero-block">
+          <div id="hero-left">
+            <img src="./media/images/jp-hero.JPG" alt="josh" id="main-img" />
           </div>
+          <div id="hero-right">
+            <h1 id="name">Josh Peachey</h1>
+            <h2 id="subhead"><em>Software Developer</em></h2>
+          </div>
+        </div>
+        <div id="hero-icons-box">
+          <a href="https://twitter.com/peach_dev" target="_blank"
+            ><i id="hero-icon" class="fab fa-github"></i
+          ></a>
+          <a href="https://twitter.com/peach_dev" target="_blank"
+            ><i id="hero-icon" class="fab social fa-twitter"></i
+          ></a>
+          <a href="https://twitter.com/peach_dev" target="_blank"
+            ><i id="hero-icon" class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://twitter.com/peach_dev" target="_blank"
+            ><i id="hero-icon" class="fa fa-envelope-o"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -99,8 +104,8 @@ font-family: 'Work Sans', sans-serif;
               writing stories for writing code.
             </p>
             <p>
-              Inspired by interviewing digital leaders and working with the
-              Digital City Festival team, I decided to retrain as a software
+              Inspired by interviewing digital leaders and working as part of
+              the Digital City Festival team, I decided to retrain as a software
               developer and transition towards a tech career.
             </p>
             <p>
@@ -125,6 +130,7 @@ font-family: 'Work Sans', sans-serif;
           </div>
           <div id="tech-stack">
             <div id="outer-box">
+              <h3 id="languages">Languages</h3>
               <img
                 class="lang-logo"
                 src="media/logos/480px-JavaScript-logo.png"
