Mino animation changes, landing-page formatting and new cartoon image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Josh Peachey | Software Developer</title>
     <!--GOOGLE FONTS-->
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Libre+Baskerville:ital@0;1&family=Work+Sans:wght@200;300;500&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Libre+Baskerville:ital@0;1&family=Work+Sans:wght@200;300;500&display=swap');
     </style>
 
     <!--- FONT AWESOME & ICONS-->
@@ -40,7 +40,7 @@ font-family: 'Work Sans', sans-serif;
   <body>
     <!---HERO SECTION-->
     <section id="hero">
-      <nav>
+      <!-- <nav>
         <ul class="nav-list" id="navbar-main">
           <a href="#about-me"
             ><li class="page-link"><em>About</em></li></a
@@ -55,12 +55,12 @@ font-family: 'Work Sans', sans-serif;
             ><li class="page-link"><em>Contact</em></li></a
           >
         </ul>
-      </nav>
+      </nav> -->
 
       <div id="introduction">
         <div id="hero-block">
           <div id="hero-left">
-            <img src="./media/images/jp-hero.JPG" alt="josh" id="main-img" />
+            <img src="./media/images/jp-cartoon.png" alt="josh" id="main-img" />
           </div>
           <div id="hero-right">
             <h1 id="name">Josh Peachey</h1>
@@ -203,7 +203,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="media/images/project-thumbnail-img.png"
+                  src="media/images/API-thumbnail.png"
                 />
                 <h3 class="proj-name">Project Name</h3>
 
@@ -219,7 +219,7 @@ font-family: 'Work Sans', sans-serif;
               <div class="project">
                 <img
                   class="project-image"
-                  src="media/images/project-thumbnail-img.png"
+                  src="media/images/API-thumbnail.png"
                 />
                 <h3 class="proj-name">Project name</h3>
 
@@ -242,7 +242,7 @@ font-family: 'Work Sans', sans-serif;
     <section id="blog">
       <h2>written work</h2>
       <div class="container" id="blog-posts-cont">
-        <div id="written-intro" data-aos="zoom-out">
+        <div id="written-intro">
           <p>
             Here you can find interviews that I've conducted with icons of
             Manchester's tech scene. Some were written when promoting
@@ -355,7 +355,7 @@ font-family: 'Work Sans', sans-serif;
           whatever reason, by filling out the form below.
         </p>
         <br />
-        <form id="contact-form" action="" method="POST" data-aos="fade-up">
+        <form id="contact-form" action="" method="POST">
           <label for="email"> Your email:</label>
           <input
             type="text"
