Correctly aligning introduction block on both x & y axis

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ font-family: 'Work Sans', sans-serif;
     <!---PORTFOLIO SECTION-->
 
     <section id="portfolio">
-      <h3 id="projects-title" data-aos="zoom">my projects</h3>
+      <h3 id="projects-title" data-aos="zoom">My Projects</h3>
 
       <div class="grid-container">
         <div class="project-1">
@@ -183,7 +183,10 @@ font-family: 'Work Sans', sans-serif;
         </div>
 
         <div class="project-3">
-          <img id="project-image" src="media/images/pokemon-img.jpg" />
+          <img
+            id="project-image"
+            src="media/images/cli-pokemon-battle-thumb.png"
+          />
           <a
             class="portfolio-link"
             href="https://github.com/Peach-24/pokemon-battle-game"
@@ -216,7 +219,7 @@ font-family: 'Work Sans', sans-serif;
     <!-- BLOG -->
 
     <section id="blog">
-      <h3 data-aos="zoom">written work</h3>
+      <h3 data-aos="zoom">Written Work</h3>
       <div class="container" id="blog-posts-cont">
         <div id="written-intro">
           <p>
@@ -323,7 +326,7 @@ font-family: 'Work Sans', sans-serif;
     <hr />
 
     <section id="contact">
-      <h3 data-aos="zoom">get in touch</h3>
+      <h3 data-aos="zoom">Contact</h3>
 
       <p id="form-text">
         <strong>But what about you?</strong> Feel free to reach out, for
