Adding working href link for NC News front end

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             id="project-image"
             src="media/images/Northcoders-news-project-thumb.png"
           />
-          <a class="portfolio-link" href=""
+          <a class="portfolio-link" href="https://nc-news-peach-24.netlify.app"
             ><h4 class="proj-name">Northcoders News platform</h4></a
           >
 
